# tg-gpt-bot

./: .gitignore  Cargo.toml  README.md  config.json  justfile
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: chat_history.rs  config_manager.rs  lib.rs  main.rs  open_ai_api.rs  response.rs
systemd-info/: README.md  refresh-service  tg-bot.service
