[package]
name = "tg-gpt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Shared
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
anyhow = "1.0.86"


# To run the Telegram bot with teloxide
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4.22"

# Open AI integration via HTTPS REST API
hyper = { version = "1.4.1", features = ["full"] }
hyper-tls = "0.6.0"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["json"] }
