[package]
name = "tg-gpt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Shared
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
anyhow = "1.0.97"


# To run the Telegram bot with teloxide
teloxide = { version = "0.13", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4.26"

# Open AI integration via HTTPS REST API
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
url = "2.5.4"
reqwest = { version = "0.12.12", features = ["json"] }
rand = "0.9.0"
